# clipaint

./: .gitignore  CMakeLists.txt  README.md  driver.h
include/app/: canvas.h  colors.h  cursor.h  driver.h  load.h  save.h  shapes.h
include/input/: input.h
include/video/: window.h
src/: main.cpp
src/app/: canvas.cpp  colors.cpp  driver.cpp  load.cpp  save.cpp
src/input/: input.cpp
src/video/: window.cpp
